--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,16 @@
-# Node.js
-node_modules/
-
-# Logs
-logs
+# npm
+node_modules
+package-lock.json
+npm-shrinkwrap.json
 *.log
-npm-debug.log*
+*.gz
 
-# Dependency directories
-pids
-logs
-*.pid
-*.seed
-*.pid.lock
+# Coveralls
+.nyc_output
+coverage
 
-# Optional npm cache directory
-.npm
+# Benchmarking
+benchmarks/graphs
 
-# Optional eslint cache
-.eslintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Environment variables
-.env*
+# ignore additional files using core.excludesFile
+# https://git-scm.com/docs/gitignore
