--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,30 @@ benchmarks/graphs
 
 # ignore additional files using core.excludesFile
 # https://git-scm.com/docs/gitignore
+
+# Node.js
+node_modules/
+
+# Logs
+logs
+
+npm-debug.log*
+
+# Dependency directories
+pids
+
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Environment variables
+.env*
